<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewdevinez"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/devinez"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/score"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toEndOf="@+id/textViewdevinez"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewScoreValue"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="1dp"
        android:text="@string/scoreValeur"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="259dp"
        android:layout_height="46dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewdevinez"
        android:autofillHints="@string/str_nombre_a_deviner"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="107dp"
        android:layout_height="47dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="10dp"
        android:text="@android:string/ok"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <ProgressBar
        android:id="@+id/progressBarTentatives"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="336dp"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />

    <TextView
        android:id="@+id/textViewTentatives"
        android:layout_width="50dp"
        android:layout_height="38dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/Tentatives"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toEndOf="@+id/progressBarTentatives"
        app:layout_constraintTop_toBottomOf="@+id/buttonOk" />

    <TextView
        android:id="@+id/textViewIndication"
        android:layout_width="389dp"
        android:layout_height="38dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="11dp"
        android:text="@string/text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTentatives" />

    <ListView
        android:id="@+id/listViewHistorique"
        android:layout_width="0dp"
        android:layout_height="407dp"
        android:layout_marginStart="1dp"
        android:padding="10dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewIndication" />

</androidx.constraintlayout.widget.ConstraintLayout>